--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--//@import url(); // Font from Google... -->
+		<link rel="icon" href="/favicon.png">
 		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
   		<link rel="stylesheet" href="/css/sethblanchard.css" />
   		<script src="/js/vendor/custom.modernizr.js"></script>
