--- a/css/sethblanchard.css
+++ b/css/sethblanchard.css
@@ -635,6 +635,37 @@ h5.personal {
     left: 48.5%;
   }
 }
+/* line 1, ../sass/components/_writing.scss */
+.writinglist {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 120px;
+}
+
+/* line 12, ../sass/components/_writing.scss */
+a.articleItem--Link,
+a.articleItem--Link:hover {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  padding: 2% 2% 7%;
+  background-size: cover;
+  background-position: 25% 25%;
+  box-sizing: border-box;
+  font-size: 1.25em;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+/* line 24, ../sass/components/_writing.scss */
+.articleItem--Link--Title {
+  margin: 0;
+}
+
+/* line 28, ../sass/components/_writing.scss */
+.articleItem--Link--Description {
+  margin: 0;
+}
+
 /* line 4, ../sass/components/_footer.scss */
 .site-footer {
   -webkit-box-sizing: border-box;
@@ -906,40 +937,40 @@ a:hover.footer--FeaturedArticles--Item--Link {
     width: 33.333333%;
   }
 }
-/* line 16, ../sass/sethblanchard.scss */
+/* line 17, ../sass/sethblanchard.scss */
 html {
   height: 100%;
 }
 
-/* line 20, ../sass/sethblanchard.scss */
+/* line 21, ../sass/sethblanchard.scss */
 body {
   background: whitesmoke;
 }
 
-/* line 24, ../sass/sethblanchard.scss */
+/* line 25, ../sass/sethblanchard.scss */
 p {
   margin: 0 0 0.977em;
 }
 
-/* line 28, ../sass/sethblanchard.scss */
+/* line 29, ../sass/sethblanchard.scss */
 a:hover {
   background: #f0f0f0;
 }
 
-/* line 32, ../sass/sethblanchard.scss */
+/* line 33, ../sass/sethblanchard.scss */
 .main {
   max-width: 1073.741px;
   margin: 0 auto;
   width: 95%;
 }
-/* line 36, ../sass/sethblanchard.scss */
+/* line 37, ../sass/sethblanchard.scss */
 .main:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 47, ../sass/sethblanchard.scss */
+/* line 48, ../sass/sethblanchard.scss */
 blockquote {
   display: block;
   font-size: 2em;
@@ -947,19 +978,19 @@ blockquote {
   color: #e0321b;
 }
 
-/* line 54, ../sass/sethblanchard.scss */
+/* line 55, ../sass/sethblanchard.scss */
 blockquote.inContext {
   display: block;
   margin: 10px;
   float: left;
 }
 
-/* line 60, ../sass/sethblanchard.scss */
+/* line 61, ../sass/sethblanchard.scss */
 img {
   max-width: 100%;
 }
 
-/* line 65, ../sass/sethblanchard.scss */
+/* line 66, ../sass/sethblanchard.scss */
 .masthead,
 h1.masthead {
   text-align: center;
@@ -968,11 +999,26 @@ h1.masthead {
   padding: 100px 0 10px;
 }
 
-/* line 73, ../sass/sethblanchard.scss */
+/* line 74, ../sass/sethblanchard.scss */
 .byline,
 h2.byline {
   font-size: 1.25em;
   text-align: center;
   padding-top: 10px;
   margin-bottom: 60px;
+}
+
+/* line 81, ../sass/sethblanchard.scss */
+.articleFooter {
+  font-size: 0.85em;
+}
+
+/* line 85, ../sass/sethblanchard.scss */
+.articleFooter--Header {
+  margin-bottom: 0px;
+}
+
+/* line 89, ../sass/sethblanchard.scss */
+.footnote {
+  margin: 10px;
 }
