Cleaned up the about page. Fixed some mobile styles. finalized some styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,22 +36,22 @@
 		<h4 class="">Elsewhere</h4>
 		<ul class="footer--Nav">
 			<li class="footer--Nav--Item">
-				<a class="footer--Nav--Item--Link"  href="twitter">
+				<a class="footer--Nav--Item--Link"  href="https://twitter.com/sethblanchard">
 					Twitter
 				</a>
 			</li>
 			<li class="footer--Nav--Item">
-				<a class="footer--Nav--Item--Link"  href="soundcloud">
+				<a class="footer--Nav--Item--Link"  href="https://soundcloud.com//sethblanchard">
 					Soundcloud
 				</a>
 			</li>
 			<li class="footer--Nav--Item">
-				<a class="footer--Nav--Item--Link"  href="linkedin">
+				<a class="footer--Nav--Item--Link"  href="http://www.linkedin.com/in/sethablanchard">
 					LinkedIn
 				</a>
 			</li>
 			<li class="footer--Nav--Item">
-				<a class="footer--Nav--Item--Link"  href="github">
+				<a class="footer--Nav--Item--Link"  href="https://github.com/sethblanchard">
 					Github
 				</a>
 			</li>
