--- a/sass/components/_writing.scss
+++ b/sass/components/_writing.scss
@@ -5,7 +5,7 @@
 }
 
 .articleItem{
-	
+	margin:0 0 60px;
 }
 
 a.articleItem--Link,
@@ -19,6 +19,13 @@ a.articleItem--Link:hover{
 	box-sizing:border-box;
 	font-size: 1.25em;
 	border: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+a.articleItem--Link.no-background,
+a.articleItem--Link:hover.no-background
+{
+	background: darken($nuetral, 3);
+	padding:2%;
 }
 
 .articleItem--Link--Title{
